--- a/modules/mongo/documentdb/0.1/facets.yaml
+++ b/modules/mongo/documentdb/0.1/facets.yaml
@@ -15,6 +15,7 @@ spec:
       pattern: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
       x-ui-placeholder: "e.g., '5.0', '6.0', or '5.0.3'"
       x-ui-error-message: "Please enter a valid version format (e.g., '5.0' or '5.0.3')."
+      x-ui-typeable: true
       x-ui-suggestions:
         - "5.0"
         - "6.0"
