--- a/modules/postgres/aurora/0.1/facets.yaml
+++ b/modules/postgres/aurora/0.1/facets.yaml
@@ -12,10 +12,9 @@ spec:
       type: string
       title: Postgres Version
       description: Specifies the Postgres version to use.
+      x-ui-typeable: true
       enum:
-      - "12.11"
       - "13.3"
-      - "14.0"
       - "15.2"
       - "16.1"
       x-ui-error-message: "Please select a supported Postgres version."
