Rename @output/ to @outputs/ throughout

--- a/intents/artifactories/facets.yaml
+++ b/intents/artifactories/facets.yaml
@@ -4,4 +4,4 @@ displayName: Artifactories
 description: Provides an Artifactories resource for creating Container Registry secrets within the cluster.
 outputs:
   - name: default
-    type: "@output/artifactories"
+    type: "@outputs/artifactories"
