--- a/intents/mongo/facets.yaml
+++ b/intents/mongo/facets.yaml
@@ -5,4 +5,4 @@ description: A NoSQL database that uses a flexible, JSON-like format to store da
 iconUrl: https://uploads-ssl.webflow.com/6252ef50a9f5d4afb6983bc3/669fa0cc13f38e2c9f09fcf7_dashboard.svg
 outputs:
   - name: default
-    type: "@output/mongo"
+    type: "@outputs/mongo"
