--- a/intents/mysql/facets.yaml
+++ b/intents/mysql/facets.yaml
@@ -5,4 +5,4 @@ description: A widely-used open-source relational database management system kno
 iconUrl: https://uploads-ssl.webflow.com/6252ef50a9f5d4afb6983bc3/669fa0cf8ac4a664f1e283eb_mysql.svg
 outputs:
   - name: default
-    type: "@output/mysql"
+    type: "@outputs/mysql"
