--- a/modules/kafka_user/default/0.2/facets.yaml
+++ b/modules/kafka_user/default/0.2/facets.yaml
@@ -11,7 +11,7 @@ lifecycle: ENVIRONMENT
 input_type: instance
 inputs:
   kafka_details:
-    type: "@output/kafka"
+    type: "@outputs/kafka"
     displayName: Kafka
     description: The details of Kafka where the user needs to be created
     optional: false
