--- a/modules/mongo/monitoring/facets.yaml
+++ b/modules/mongo/monitoring/facets.yaml
@@ -9,7 +9,7 @@ clouds:
 description: Adds Monitoring to Mongodb
 inputs:
   default:
-    type: "@output/mongo"
+    type: "@outputs/mongo"
     adds_capability: true
 spec:
   title: Mongo Monitoring
