--- a/modules/mongo_user/default/0.2/facets.yaml
+++ b/modules/mongo_user/default/0.2/facets.yaml
@@ -13,7 +13,7 @@ input_type: instance
 inputs:
   kubernetes_details:
     optional: false
-    type: "@output/kubernetes"
+    type: "@outputs/kubernetes"
     displayName: Kubernetes Cluster
     description: Details of Kubernetes where the CRD for managing mongo user will
       be created
@@ -21,13 +21,13 @@ inputs:
       resource_type: kubernetes_cluster
       resource_name: default
   mongodb_auth_operator_details:
-    type: "@output/mongodb_auth_operator"
+    type: "@outputs/mongodb_auth_operator"
     displayName: MongoDB Auth Operator
     description: The details of MongoDB Auth Operator which is responsible to create
       mongo users
     optional: false
   mongo_details:
-    type: "@output/mongo"
+    type: "@outputs/mongo"
     displayName: Mongo
     description: The details of Mongo where the user needs to be created
     optional: false
