--- a/intents/pvc/facets.yaml
+++ b/intents/pvc/facets.yaml
@@ -4,5 +4,5 @@ displayName: PVC
 description: Persistent Volume Claim for storage in Kubernetes, dynamically requesting storage resources.
 outputs:
   - name: default
-    type: "@output/pvc"
+    type: "@outputs/pvc"
 iconUrl: https://cdn.prod.website-files.com/6252ef50a9f5d4afb6983bc3/67a3333ece2efe941434643a_K8s-pvc.svg
