--- a/intents/s3/facets.yaml
+++ b/intents/s3/facets.yaml
@@ -6,7 +6,7 @@ iconUrl: https://uploads-ssl.webflow.com/6252ef50a9f5d4afb6983bc3/669fa0ccf06a57
 outputs:
   - name: attributes.read_only_iam_policy_arn
     title: "S3 Read Permission"
-    type: "@output/iam_policy_arn"
+    type: "@outputs/iam_policy_arn"
   - name: attributes.read_write_iam_policy_arn
     title: "S3 Read Write Permission"
-    type: "@output/iam_policy_arn"
+    type: "@outputs/iam_policy_arn"
