--- a/modules/database_operator/default/0.1/facets.yaml
+++ b/modules/database_operator/default/0.1/facets.yaml
@@ -12,7 +12,7 @@ input_type: instance
 composition: {}
 inputs:
   kubernetes_details:
-    type: "@output/kubernetes"
+    type: "@outputs/kubernetes"
     displayName: Kubernetes Cluster
     description: The details of kubernetes cluster where the database operator will be installed
     optional: false
