--- a/modules/vault/k8s/0.1/facets.yaml
+++ b/modules/vault/k8s/0.1/facets.yaml
@@ -10,7 +10,7 @@ clouds:
 inputs:
   kubernetes_details:
     optional: false
-    type: "@output/kubernetes"
+    type: "@outputs/kubernetes"
     default:
       resource_type: kubernetes_cluster
       resource_name: default
