--- a/modules/schemahero_database/k8s/0.1/facets.yaml
+++ b/modules/schemahero_database/k8s/0.1/facets.yaml
@@ -1,76 +1,19 @@
-intent: schemahero-controller
-flavor: default
-version: "0.1"
-description: "Deploys SchemaHero controller for automated database schema management in Kubernetes environments"
-lifecycle: ENVIRONMENT_BOOTSTRAP
+intent: schemahero_database
+flavor: k8s
+version: '0.1'
+description: Adds schemahero_database - k8s flavor
 clouds:
-  - kubernetes
-conditional_on_intent: schemahero_database
-input_type: config
-
-spec:
-  type: object
-  properties:
-    size:
-      type: object
-      title: Resource Configuration
-      description: CPU and memory resource limits for the schemahero controller
-      properties:
-        cpu:
-          type: string
-          title: CPU Limit
-          description: CPU resource limit for the schemahero controller
-          default: "100m"
-          pattern: "^[0-9]+[m]?$"
-        memory:
-          type: string
-          title: Memory Limit
-          description: Memory resource limit for the schemahero controller
-          default: "150Mi"
-          pattern: "^[0-9]+[KMGT]?[i]?[Bb]?$"
-      default:
-        cpu: "100m"
-        memory: "150Mi"
-    advanced:
-      type: object
-      title: Advanced Configuration
-      description: Advanced Helm values and configuration options
-      x-ui-toggle: true
-      properties:
-        default:
-          type: object
-          title: Custom Helm Values
-          description: Additional Helm values to override defaults
-          properties:
-            values:
-              type: object
-              title: Helm Values
-              description: Custom Helm values in YAML format
-              x-ui-yaml-editor: true
-              default: {}
-          default:
-            values: {}
-      default:
-        default:
-          values: {}
-  required: []
-
-inputs:
-  kubernetes_details:
-    type: "@outputs/kubernetes-cluster-details"
-    optional: false
-    displayName: "Kubernetes Cluster Details"
-    description: "Kubernetes cluster configuration and provider access"
-    providers:
-      - kubernetes
-      - helm
-
-outputs:
-  default:
-    type: "@outputs/schemahero-controller"
-    title: "SchemaHero Controller Installation"
-
+- aws
+- gcp
+- azure
+- kubernetes
 sample:
-  size:
-    cpu: "100m"
-    memory: "150Mi"
+  $schema: https://facets-cloud.github.io/facets-schemas/schemas/schemahero_database/schemahero_database.schema.json
+  flavor: k8s
+  kind: schemahero_database
+  metadata: {}
+  spec:
+    connection: postgres
+    uri: postgresql://postgres:test12345@schemahero-postgres-postgresql.default.svc.cluster.local:5432/schemahero
+  version: '0.1'
+  disabled: true
